--- a/Ensek.Api/Ensek.Api.csproj
+++ b/Ensek.Api/Ensek.Api.csproj
@@ -8,6 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -18,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Ensek.DataAccess\Ensek.DataAccess.csproj" />
       <ProjectReference Include="..\Ensek.ErrorManagement\Ensek.ErrorManagement.csproj" />
       <ProjectReference Include="..\Ensek.Services\Ensek.Services.csproj" />
     </ItemGroup>
