--- a/Ensek.Services/Ensek.Services.csproj
+++ b/Ensek.Services/Ensek.Services.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="33.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     </ItemGroup>
 
     <ItemGroup>
