--- a/Ensek.DataAccess/Ensek.DataAccess.csproj
+++ b/Ensek.DataAccess/Ensek.DataAccess.csproj
@@ -14,6 +14,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     </ItemGroup>
 
     <ItemGroup>
