--- a/Ensek.Api/appsettings.json
+++ b/Ensek.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ensektest;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "$CONN_STRING"
   },
   "AllowedHosts": "*"
 }
